<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/common_padding_xlarge"
    android:paddingVertical="@dimen/common_padding_default"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConsult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_consult"
        app:layout_constraintStart_toStartOf="@id/btnCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_create"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btnConsult"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/main_hint_descripcion"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/tilCoupon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"> <!-- Ajusta el valor según tus necesidades -->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_hint_descripcion"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="238dp"
            tools:text="Cupon valido por 10% en compras mayores a 10 USD." />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCoupon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/main_hint_coupon"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilDescription"
        app:layout_constraintBottom_toTopOf="@id/btnConsult"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCoupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_hint_coupon" />
    </com.google.android.material.textfield.TextInputLayout>
-0




</androidx.constraintlayout.widget.ConstraintLayout>